force-app/main/default/objects/IMCC_API_Synchronization_Transaction__c/IMCC_API_Synchronization_Transaction__c.object-meta.xml
<CustomObject>
    <description>IMCC: Object to track syncing of data &amp; this will help in tracking errors while Sync</description>
    <label>IMCC API Synchronization Transaction</label>
    <nameField>
        <displayFormat>IMCCAST-{0000}</displayFormat>
        <label>IMCC API Synchronization Transaction Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMCC API Synchronization Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>