force-app/main/default/objects/IMCC_API_Synchronization_Transaction__c/fields/Interface_Log__c.field-meta.xml
<CustomField>
    <fullName>Interface_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be populated in case of generated errors</description>
    <label>Interface Log</label>
    <referenceTo>Interface_Log__c</referenceTo>
    <relationshipLabel>IMCC API Synchronization Transactions</relationshipLabel>
    <relationshipName>IMCC_API_Synchronization_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>