force-app/main/default/objects/IMCC_API_Synchronization_Transaction__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>Apex Job Id</description>
    <label>JobId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>