force-app/main/default/objects/IMCC_API_Synchronization_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the transaction. Some status will be dependent on status of related line items. The default value will be Queued.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Completed With Errors</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Requeue for Erroneous records</fullName>
            </value>
            <value>
                <fullName>Requeue All</fullName>
            </value>
            <value>
                <fullName>Requeue for Successful records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>