force-app/main/default/objects/IMCC_API_Synchronization_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Started_From__c</columns>
    <columns>Type__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>